--- a/Landing/public/index.html
+++ b/Landing/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="Shihami is the world’s leading NFTs marketplace where you can discover, sell and bid NFTs and get rich" />
+    content="FanFi is the world’s leading NFTs marketplace where you can discover, sell and bid NFTs and get rich" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>
-    HIHAMI
+    FanFi
   </title>
 </head>
 
