--- a/Landing/public/index.html
+++ b/Landing/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="FanFi is the world’s leading NFTs marketplace where you can discover, sell and bid NFTs and get rich" />
+    content="FanFi is the world’s leading Authentic Ticket Minting Platform" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
