--- a/Landing/public/index.html
+++ b/Landing/public/index.html
@@ -26,6 +26,7 @@
   <title>
     FanFi
   </title>
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
 <body>
